Fix unnecessary scrollbars in stories, update some card text

--- a/stories/stories.css
+++ b/stories/stories.css
@@ -1,5 +1,6 @@
 body {
-  margin: 2rem;
+  padding: 2rem;
+  box-sizing: border-box;
 }
 
 .guide-example {
